# android_am_instrument_result_parser

./: MODULE.bazel  README.md
src/main/: BUILD.bazel
src/main/com/android/ddmlib/: IShellEnabledDevice.java  Log.java  MultiLineReceiver.java
src/main/com/android/ddmlib/testrunner/: IInstrumentationResultParser.java  IRemoteAndroidTestRunner.java  InstrumentationResultParser.java  RemoteAndroidTestRunner.java  TestResult.java  TestRunResult.java  XmlTestRunListener.java
src/main/org/example/: BUILD.bazel  Main.java
src/test/: BUILD.bazel
src/test/org/example/: MainTest.java
