module(
    name = "null",
    version = "0.1.0",
)

bazel_dep(name = "rules_java", version = "8.10.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")

# Set up Maven repositories for dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "junit:junit:4.13.2",
#         "org.jetbrains:annotations:24.0.0",
        "org.jspecify:jspecify:1.0.0",
        "net.sf.kxml:kxml2:2.3.0",
        "org.mockito:mockito-core:5.17.0",
        "com.google.truth:truth:1.4.4",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")